deploy gh-pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
       <meta charset="UTF-8">
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
       <title>DaftCode React Starter</title>
-  </head>
+  <link href="main.css" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
-  </body>
+  <script type="text/javascript" src="main.58ffb874cb0a2832755e.js"></script></body>
 </html>
